@@ -20,11 +20,11 @@ public class BlacklistSearchTest extends BackEndTest {
         RegistrationParameters testUserData = RegistrationParameters.validParameters();
         IndexPageActions.registerAndLogin(getServerPort(), testUserData);
 
-        List<SearchResultItem> searchResult = BlacklistActions.search(getServerPort(), accessToken, getTestMethodName());
+        List<SearchResultItem> searchResult = BlacklistActions.search(getServerPort(), accessToken, testUserData.getUsername());
 
         assertThat(searchResult).hasSize(1);
-        assertThat(searchResult.get(0).getUsername()).isEqualTo(testUserData.getUsername());
-        assertThat(searchResult.get(0).getEmail()).isEqualTo(testUserData.getEmail());
+        assertThat(searchResult.getFirst().getUsername()).isEqualTo(testUserData.getUsername());
+        assertThat(searchResult.getFirst().getEmail()).isEqualTo(testUserData.getEmail());
 
         BlacklistActions.createBlacklist(getServerPort(), accessToken, searchResult.get(0).getUserId());
 
